--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack --config webpack.config.js"
+  },
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
