--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6"
   }
